tests/snapshots/snapshot__batch_sentence_settings.snap
---
source: tests/snapshot.rs
expression: "render_sized(&app, 96, 16)"
---
                                                                                                
     word meanings   choose the meanings you want to learn                           FR → FR    
                                                                                                
    generation guidance                                                                         
    what's the desired level?  <           b1           >                                       
    what kinds of phrases?     <        questions       >                                       
                                                                                                
    01  chouette      —  an owl or something excellent                                          
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                      ai may be wrong, please verify results    
                                                                                                
    step 2/3  1 card               [Ctrl+G] generate  [←→] pick  [↑↓] nav  [Enter/Esc] close
