tests/snapshots/snapshot__done.snap
---
source: tests/snapshot.rs
expression: render(&app)
---
                                                                                
     your cards   your files are ready                                RU → ?    
                                                                                
    │ ↓ FOLDER  ~/Documents/Kamishibai                                          
    │ ↓ APKG    RU_cards.apkg                                                   
    │ ↓ PDF     RU_cards.pdf                                                    
                                                                                
                                                                                
    no cards in this batch                                                      
                                      ai may be wrong, please verify results    
                                                                                
    step 3/3  0/0 ready                       [Esc] new cards  [Ctrl+C] quit
