tests/snapshots/snapshot__partial_publish.snap
---
source: tests/snapshot.rs
expression: "render_sized(&app, 100, 14)"
---
                                                                                                    
     your cards   start with the ready cards, then retry the rest                         RU → ?    
                                                                                                    
    │ ↓ FOLDER  ~/Documents/Kamishibai                                             1 unfinished     
    │ ↓ APKG    RU_cards.apkg                                                                       
    │ ↓ PDF     RU_cards.pdf                                                                        
                                                                                                    
                                                                                                    
     ✓ 01  whilst                                                                                   
     ✓ 02  wreck                                                                                    
                                                                                                    
                                                          ai may be wrong, please verify results    
                                                                                                    
    step 3/3  1/2 ready            [Ctrl+G] regenerate  [↑↓] nav  [Esc] new cards  [Ctrl+C] quit
