tests/snapshots/snapshot__pick_languages_modal_scrolled.snap
---
source: tests/snapshot.rs
expression: "render_sized(&opened_picker(), 96, 20)"
---
                ┌─ languages ──────────────────────────────────────────────────┐                
     word meanin│                                                              │      RU → ?    
                │  your language             →  what you're learning           │                
    understandin│  ──────────────────────       ───────────────────────────    │                
                │                               auto  detect from the words    │                
                │  JA    日 本 語            │     EN    English               ┃  │                
                │  FR    Français         ┃     ZH    中 文                   ┃  │                
                │  DE    Deutsch          ┃     ES    Español               ┃  │                
                │  KO    한 국 어            ┃     JA    日 本 語                 ┃  │                
                │  RU    Русский          ┃     FR    Français              │  │                
                │  IT    Italiano         │     DE    Deutsch               │  │                
                │  PT    Português        │     KO    한 국 어                 │  │                
                │  HI    Hindi            │     RU    Русский               │  │                
                │  AR    Arabic           │     IT    Italiano              │  │                
                │                                                              │                
                │  [Enter] confirm  [←→] column  [↑↓] nav  [Esc] cancel        │                
                └──────────────────────────────────────────────────────────────┘                
                                                      ai may be wrong, please verify results    
                                                                                                
    step 2/3  nothing to make                                                  [Ctrl+C] quit
