tests/snapshots/snapshot__pick_my_language_modal.snap
---
source: tests/snapshot.rs
assertion_line: 69
expression: buffer
---
                                                                                
     what i understood   quick check before i build the cards         RU → …    
                                                                                
    understanding your words…                                                   
       ┌─ my language ──────────────────────────────────────────────────┐       
       │                                                                │       
       │   EN    ZH    ES    JA    FR    DE    RU    IT    PT    EL     │       
       │                                                                │       
       │  [← →] pick  [Enter] confirm  [Esc] cancel                     │       
       │                                                                │       
       └────────────────────────────────────────────────────────────────┘       
                                                                                
                                                                                
                                                                                
                                                                                
    step 2/3 · nothing to make[↑↓] nav · [D] drop · [R] change · [Enter] gen
