tests/snapshots/snapshot__welcome_key_step_no_env.snap
---
source: tests/snapshot.rs
expression: "render_sized(&app, 96, 16)"
---
                                                                                                
     setup   choose your language and add a gemini key                                          
                                                                                                
    kamishibai turns a list of words you want to learn into an anki deck plus a printable       
    pdf. for each word it writes a natural example sentence, illustrates the scene as a         
    manga panel, and reads it aloud in a natural, native-speaker voice.                         
                                                                                                
    01  your language     EN    English                                                         
                                                                                                
    02  gemini api key  › paste or type your key                                                
                          ───────────────────────────────────────                               
                                                                                                
                           submit                                                               
                                                      ai may be wrong, please verify results    
                                                                                                
    step 2/2                                       [Enter] submit  [Esc] back  [Ctrl+C] quit
