tests/snapshots/snapshot__what_i_understood.snap
---
source: tests/snapshot.rs
expression: render(&app)
---
                                                                                
     word meanings   choose the meanings you want to learn            RU → ?    
                                                                                
    understanding your words…                                                   
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                      ai may be wrong, please verify results    
                                                                                
    step 2/3  nothing to make        [Enter/→] open  [D] drop  [Ctrl+C] quit
