tests/snapshots/snapshot__what_i_understood_multi_meaning.snap
---
source: tests/snapshot.rs
expression: render(&app)
---
                                                                                
     word meanings   choose the meanings you want to learn           RU → EN    
                                                                                
    generation guidance   best fit                                              
                                                                                
    01  bank 2/3      multiple meanings:                                        
                         —  [фин.] Сущ. «банк», финансовое учреждение.          
                         —  Сущ. «берег» реки или водоёма.                      
                                                                                
                                      ai may be wrong, please verify results    
                                                                                
    step 2/3  2 cards         [Ctrl+G] generate  [↑] guidance  [Ctrl+C] quit
