tests/snapshots/snapshot__your_cards.snap
---
source: tests/snapshot.rs
expression: render(&app)
---
                                                                                
     your cards   continue with these cards when you're ready         RU → ?    
                                                                                
                                                                                
    preparing cards…                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                      ai may be wrong, please verify results    
                                                                                
    step 3/3  0/0 ready  00:00                                 [Ctrl+C] quit
