tests/snapshots/snapshot__your_words.snap
---
source: tests/snapshot.rs
expression: render(&app)
---
                                                                                
     your words   add words or phrases, one per line                  RU → ?    
                                                                                
    01                                                                          
    02                                                                          
    03  type or paste, one item per line                                        
    04                                                                          
                                                                                
                                                                                
                                      ai may be wrong, please verify results    
                                                                                
    step 1/3  empty                        [Ctrl+L] languages  [Ctrl+C] quit
